# Test-Project

./: .gitignore
Include/: Circle.h  Enemy.h  Example.h  Map.h  OSTlib.h  Obstacles.h  Plant.h  Projectile.h  Root.h  SFXlib.h  Screen.h  Utils.h  Vec2.h
lib/: readme.txt
src/: CMakeLists.txt  Circle.cpp  Enemy.cpp  Example.cpp  Map.cpp  OSTlib.cpp  Obstacles.cpp  Plant.cpp  Projectile.cpp  Root.cpp  SFXlib.cpp  Utils.cpp  main.cpp
test/: CMakeLists.txt  mytest.cpp
